<resources>
    <string name="app_name">NuestraSangre</string>
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="aceptar">Aceptar</string>
    <string name="registrarse">Registrarse</string>
    <string name="contrasena">Contraseña</string>
    <string name="repcontrasena">Repetir Contraseña</string>
    <string name="correo">Correo</string>
    <string name="perfil">Perfil</string>
    <string name="mCerrar">Cerrar Sesion</string>
    <string name="principal">Principal</string>
    <string name="salir">Salir</string>
    <string name="not_close_session" />
</resources>
