<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sergiobt.nuestrasangre.LogginActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/usuario" />

        <EditText
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:id="@+id/eUsuario"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/contraseña" />

        <EditText
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:id="@+id/eContrasena"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cadetblue"
            android:onClick="aceptar"
            android:text="@string/aceptar"
            android:textAllCaps="false"
            android:textColor="@color/antiquewhite"
            android:textSize="28sp"
            android:textStyle="bold|italic" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1">
    <com.google.android.gms.common.SignInButton

        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/registrarse"
            android:onClick="Registrarse"
            android:textColor="@color/blue"/>


    </LinearLayout>


</LinearLayout>
